--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
     "axios": "^0.27.2",
     "cra-template-fretebras": "1.0.2",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
