--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.9.1",
     "axios": "^0.27.2",
     "cra-template-fretebras": "1.0.2",
+    "localStorage": "^1.0.4",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
