--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@mui/material": "^5.9.1",
     "axios": "^0.27.2",
     "cra-template-fretebras": "1.0.2",
+    "framer-motion": "^6.5.1",
     "localStorage": "^1.0.4",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "latest",
     "styled-components": "^5.3.5"
   },
