--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "axios": "^0.27.2",
     "cra-template-fretebras": "1.0.2",
     "framer-motion": "^6.5.1",
+    "leaflet": "^1.8.0",
     "localStorage": "^1.0.4",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "latest",
     "react-toastify": "^9.0.8",
@@ -53,6 +55,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.4.0",
+    "@types/leaflet": "^1.7.11",
     "@types/lodash": "^4.14.178",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
