Adiciona PR como trigger de action

--- a/.github/workflows/release-ci-homolog.yml
+++ b/.github/workflows/release-ci-homolog.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - 'v*'
+
+  pull_request:
+    types: [opened, closed]
+
 jobs:
   build:
     runs-on: ubuntu-latest
