--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "cra-template-fretebras": "1.0.2",
     "framer-motion": "^6.5.1",
+    "jest-environment-jsdom": "^29.0.3",
     "leaflet": "^1.8.0",
     "localStorage": "^1.0.4",
     "mui": "^0.0.1",
@@ -25,7 +26,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "yarn jest --watchAll=false --silent --verbose",
+    "test": "jest --watchAll",
     "eject": "react-scripts eject",
     "jest": "react-app-rewired test --passWithNoTests",
     "prepare": "husky install"
@@ -51,10 +52,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^27.4.0",
+    "@swc/core": "^1.3.0",
+    "@swc/jest": "^0.2.22",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.7.11",
     "@types/lodash": "^4.14.178",
     "@types/node": "^16.7.13",
@@ -77,7 +80,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
-    "jest": "^28.0.0",
+    "jest": "^28.1.3",
     "jest-styled-components": "^7.0.8",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.5.1",
@@ -85,23 +88,8 @@
     "react-scripts": "5.0.0",
     "standard-version": "^9.3.2",
     "ts-jest": "^28.0.2",
+    "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.4.2"
-  },
-  "jest": {
-    "coverageReporters": [
-      "html",
-      "text",
-      "text-summary",
-      "cobertura"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 70,
-        "functions": 70,
-        "lines": 70,
-        "statements": 70
-      }
-    }
   }
 }
