--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.2",
     "cra-template-fretebras": "1.0.2",
     "framer-motion": "^6.5.1",
     "jest-environment-jsdom": "^29.0.3",
     "leaflet": "^1.8.0",
     "localStorage": "^1.0.4",
+    "msw": "^0.47.2",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -82,6 +84,7 @@
     "husky": "^7.0.0",
     "jest": "^28.1.3",
     "jest-styled-components": "^7.0.8",
+    "miragejs": "^0.1.45",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.5.1",
     "react-app-rewired": "^2.1.11",
