--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,18 +1,28 @@
-name: Coverage report
 on:
-  pull_request:
-    branches:
-      - master
+  # Trigger analysis when pushing in master or pull requests, and when creating
+  # a pull request.
   push:
     branches:
       - devel
-      - main
+
+name: Main Workflow
 jobs:
-  coverage:
+  sonarcloud:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: artiomtr/jest-coverage-report-action@v1.3
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          #   threshold: 80 # optional parameter
+          fetch-depth: 0
+      - name: Get master
+        run: git fetch origin devel
+      - name: Install dependencies
+        run: npm install
+      - name: Install Jest globally
+        run: sudo npm install -g jest
+      - name: Run Tests
+        run: npm run test
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
