--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "jest --watchAll",
+    "test": "jest --ci --coverage --testLocationInResults",
     "eject": "react-scripts eject",
     "jest": "react-app-rewired test --passWithNoTests",
     "prepare": "husky install"
@@ -83,6 +83,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.0",
     "jest": "^28.1.3",
+    "jest-sonar-reporter": "^2.0.0",
     "jest-styled-components": "^7.0.8",
     "miragejs": "^0.1.45",
     "parcel-bundler": "^1.12.5",
