--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-excel-export": "^1.0.6",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.2",
     "react-router-dom": "^6.3.0",
