--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Get master
         run: git fetch origin devel
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
       - name: Install Jest globally
         run: sudo npm install -g jest
       - name: Run Tests
