--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/parser": "^5.11.0",
     "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
+    "cypress": "^12.0.2",
     "eslint": "7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
