--- a/.github/workflows/release-ci-homolog.yml
+++ b/.github/workflows/release-ci-homolog.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
+          allowUpdates: true
           token: ${{ secrets.GIT_TOKEN }}
           tag: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
