--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          build: npm run build
+          build: CI=false npm run build
           start: npm start
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
