Adiciona configurações de lint

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
     "test": "jest --ci --coverage --testLocationInResults",
     "eject": "react-scripts eject",
     "jest": "react-app-rewired test --passWithNoTests",
