--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "jest": "^28.1.3",
     "jest-sonar-reporter": "^2.0.0",
     "jest-styled-components": "^7.0.8",
+    "jest-transform-stub": "^2.0.0",
     "miragejs": "^0.1.45",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.5.1",
