Altera versão do nodejs

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,16 +11,12 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        node_version: [12]
-
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node_version }}
+      - name: Use Node.js 12
         uses: actions/setup-node@v1
         with:
-          node_version: ${{ matrix.node_version }}
+          node_version: 12
 
       - name: run CI
         run: |
